[package]
name = "engine_agate"
version = "0.0.1"
description = "An example TiKV storage engine with AgateDB"
edition = "2018"
publish = false

[dependencies]
engine_traits = { path = "../engine_traits", default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
tikv_alloc = { path = "../tikv_alloc" }
# FIXME: Remove this dep from the engine_traits interface
tikv_util = { path = "../tikv_util", default-features = false }
tracker = { path = "../tracker" }
txn_types = { path = "../txn_types", default-features = false }
agatedb = { git = "https://github.com/GanZiheng/agatedb", branch = "integrate-tikv" }
getset = "0.1.2"
